--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-
-<h1><img src="slategrey.png" alt="slategrey logo"> jocarsa | slategrey</h1>
+<div id="corporativo">
+  <img src="rotom.png" alt="rotomix logo">
+  <h1> agusmadev | rotomix</h1>
+</div>
 
 <div id="container">
 
